fixed overflow

--- a/index.css
+++ b/index.css
@@ -18,13 +18,16 @@
 
 html,
 body {
-  overflow: hidden;
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
+  text-size-adjust: none;
+  /* overflow: hidden; */
 }
 
 .main {
   background-color: #c5bdb4;
   position: relative;
-  /* overflow-x: hidden; */
 }
 
 .no-copy {
